--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 #wrapper{
   position:relative;
+  width:300px;
+  height:200px;
   margin:0 auto;
   padding:0;
+  background:black;
+  border:1px solid blue;
 }
 canvas{
   position:absolute;
