--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 #wrapper{
   position:relative;
-  width:300px;
-  height:200px;
+  width:400px;
+  height:400px;
   margin:0 auto;
   padding:0;
   background:black;
@@ -15,4 +15,7 @@ canvas{
 }
 canvas.front{
   z-index:200;
+}
+canvas.grid{
+  z-index:210;
 }
